Admin Api fixes
